java: use 'Long.valueOf' instead of 'new Long'
Change-Id: Idba02391126e5046f77b26b134a76424f7931e0d